changed some z-indexes to see if I solve the nav error on phone

--- a/src/PageStyling/scss/_NavBar.scss
+++ b/src/PageStyling/scss/_NavBar.scss
@@ -96,8 +96,8 @@ $KeyBotColor: #00CDFF;
             align-items: center;
 
             img{
-                width: 99%;
-                height: 99%;
+                width: 100%;
+                height: 100%;
                 background-color: $NavBarBordercolor2;
                 border-radius: 50%;
             }
@@ -166,13 +166,15 @@ $KeyBotColor: #00CDFF;
                     opacity: 1;
                     text-align: center;
                     position: relative;
+                    z-index: 1;
     
                     li{
                         position: absolute;
                         list-style: none;
                         font-size: 30px;
                         text-align: center;
-    
+                        z-index: 2;
+
                         transform: rotate(-45deg); 
                         
                         p{
